2004-03-21  Stephane Carrez  <stcarrez@nerim.fr>

	* doc/Makefile.in (all): New file to make the documentation.
	* doc/adabrowse.css: New file, stylesheet from Adabrowse 4.0
	* doc/bfdada.cfg: New file, configuration file for Adabrowse.

2004-03-21  Stephane Carrez  <stcarrez@nerim.fr>

	* examples/utils.ads: New file, from several functions from bfdinfo.
	* examples/utils.adb: New file, likewise.
	* examples/sections.adb: New file, split example from bfdinfo.
	* examples/Makefile.in: Build new example.

	* configure.in: Configure it.
	* bfdada-config.in: New file.
	* Makefile.am: Likewise and install it.
	* Makefile.in: Rebuild.
	* configure: Rebuild.
	* bfdada/Makefile.in: Build the html documentation with adabrowse.
	* bfdada/bfd.adb (Safe_Mode): Make constant.

2004-03-20  Stephane Carrez  <stcarrez@nerim.fr>

	* examples/bfdinfo.adb (List_Symbols): Remove unused variable.
	* bfdada/bfd.ads: Likewise.
	* bfdada/bfd-thin-symtab.ads: Likewise.
	* bfdada/bfd-thin-sections.ads: Likewise.
	* bfdada/bfd-thin-disassembler.ads: Likewise.
	* bfdada/bfd-symtab.ads: Likewise.
	* bfdada/bfd-sections.ads: Likewise.
	* bfdada/bfd-disassemble.ads: Likewise.
	* bfdada/bfd-internal.ads: Fix comment for adabrowse.

2004-02-27  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd.adb (Check_Bfd): New function.
	(Get_Filename): Call it.
	(Check_Format): And here.
	(Get_Start_Address): Likewise.
	(Get_Symbol_Count): Likewise.

2004-02-27  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfd.ads: Fix initialization of File_Type.

2004-02-27  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/Makefile.in: Update
	* bfdada/bfd-sections.adb (Current): Fix indent.
	* bfdada/bfd-sections.ads (Set_Section_Contents): Likewise.
	* bfdada/bfd.adb: Likewise.
	* bfdada/bfd.ads: Likewise.
	* examples/Makefile.in: Update.

2003-05-21  Stephane Carrez  <stcarrez@nerim.fr>

	* bfdada/bfdc.c (bfdada_memory_error_handler): New function.
	* bfdada/bfd-thin-disassembler.ads: New file, disassembler.
